kubernetes/apps/default/agregarr/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: agregarr
spec:
  parentRefs:
    - name: envoy-internal
      namespace: network
  hostnames:
    - "agg.ragas.cc"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: agregarr
          port: 7171
